// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid It should render. 1`] = `
<div>
  <div
    class="Grid"
  />
</div>
`;

exports[`GridCol It should render. 1`] = `
<div>
  <div
    class="GridCol"
  />
</div>
`;
